# qua-libs

./: .gitignore  00_hello_qua_2.py  00_hello_qua_4.py  00_hello_qua_5.py  02_raw_adc_traces_mw_fem.py  QPU_T1.csv  README.md  configuration.py  debug.py  log.txt  qua_config.json  qua_config_calibration_db.json  sequences.txt
Quantum-Control-Applications-QuAM/Superconducting/: CZ_fidelity_checklist.py  GodsDice.py  README.md  as-qpu-10qV2_QPUinfo.csv  compat.py  pyproject.toml  qm_qua-0.0.0-py3-none-any.whl  test.py
Quantum-Control-Applications-QuAM/Superconducting/Script/: _run_file.py  run_calibration_sequence.bat  run_calibration_sequence.ps1
Quantum-Control-Applications-QuAM/Superconducting/calibration_graph/: 00_close_other_qms.py  00_delays.py  00_hello_qua_1.py  00_hello_qua_2.py  00_hello_qua_3.py  00x_close_specific_qm.ipynb  01a_mixer_calibration.py  01b_time_of_flight.py  01b_time_of_flight_mw_fem.py  01b_time_of_flight_opx_plus.py  02_Bare_Resonator_Spectroscopy.py  02a_Resonator_Spectroscopy.py  02b_resonator_spectroscopy_vs_flux.py  02b_resonator_spectroscopy_vs_flux_with_crossings.py  02c_resonator_spectroscopy_vs_amplitude.py  02d_resonator_spectroscopy_vs_flux_pulse_crosstalk.py  02e_resonator_spectroscopy_vs_coupler_flux.py  02x_Bare_Resonator_Spectroscopy.py  03a_Qubit_Spectroscopy.py  03b_qubit_spectroscopy_vs_flux.py  03c_qubit_spectroscopy_vs_coupler_flux.py  03d_qubit_spectroscopy_vs_coupler_flux_pulse.py  03e_QubitFluxSpectroscopyCouplerPositioning.py  03e_qubit_flux_spectroscopy_with_set_coupler_position.py  04_Power_Rabi.py  05_T1.py  (+104 more)
(+428 files in other folders)
