[project]
name = "quam_libs"
version = "0.1.0"
description = "QuAM Components for Quantum Control"
readme = "README.md"
license = { text = "BSD-3-Clause" }
requires-python = ">=3.10"
keywords = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
dependencies = [
    "quam==0.4.2",
    "qualang-tools==0.20.0",
    "xarray",
    "lmfit",
    "qiskit-experiments",
    "tqdm",
    "qualibrate==0.2.2",
    "qualibrate-config==0.1.11",
    "qm-qua>=1.2.5",
    "tomli>=2.0.1; python_version < '3.11'",
    "colorama",
    "more_itertools"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"